--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,6 +8,18 @@ macro(add_matplot_example TARGET_NAME)
     endif()
 endmacro()
 
+if (MSVC)
+    macro(add_matplot_windows_gui_example TARGET_NAME)
+    add_executable(${TARGET_NAME} WIN32 ${ARGN})
+    target_link_libraries(${TARGET_NAME} PUBLIC gdiplus.lib PRIVATE matplot)
+    maybe_target_pedantic_warnings(${TARGET_NAME})
+    if (MATPLOTPP_BUILD_TESTS)
+        add_test(NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
+        set_tests_properties(${TARGET_NAME} PROPERTIES ENVIRONMENT "GNUTERM=dumb")
+    endif()
+endmacro()
+endif()
+
 add_subdirectory(line_plot)
 add_subdirectory(data_distribution)
 add_subdirectory(discrete_data)
@@ -21,3 +33,6 @@ add_subdirectory(images)
 add_subdirectory(annotations)
 add_subdirectory(appearance)
 add_subdirectory(exporting)
+if (MSVC)
+    add_subdirectory(windows_gdiplus)
+endif()
